--- a/ansible/tasks/windows-cloud-watch-setup.yml
+++ b/ansible/tasks/windows-cloud-watch-setup.yml
@@ -1,4 +1,6 @@
 ---
 - name: "Install CloudWatch Agent Windows"
   ansible.windows.win_shell: |
-  
+    Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+    Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+    
