--- a/ansible/tasks/windows-cloud-watch-setup.yml
+++ b/ansible/tasks/windows-cloud-watch-setup.yml
@@ -1,5 +1,10 @@
 ---
-- name: "Install CloudWatch Agent Windows"
+- name: "Download the CloudWatch Agent installation package to the user's desktop."
+  ansible.windows.win_shell: |
+    Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+    Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+
+- name: "Download the CloudWatch Agent installation package to the user's desktop."
   ansible.windows.win_shell: |
     Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
     Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
