--- a/ansible/tasks/windows-cloud-watch-setup.yml
+++ b/ansible/tasks/windows-cloud-watch-setup.yml
@@ -1,11 +1,148 @@
 ---
-- name: "Download the CloudWatch Agent installation package to the user's desktop."
+- name: "Download the CloudWatch Agent installation package to the user's desktop"
   ansible.windows.win_shell: |
     Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
     Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
 
-- name: "Download the CloudWatch Agent installation package to the user's desktop."
+- name: "Install the CloudWatch Agent"
   ansible.windows.win_shell: |
-    Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
-    Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+    msiexec /i $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
+    
+- name: "Launch the amazon-cloudwatch-agent-config-wizard.exe executable"
+  ansible.windows.win_shell: |
+    & $env:ProgramFiles\Amazon\AmazonCloudWatchAgent\amazon-cloudwatch-agent-config-wizard.exe
+    
+- name: "Create CloudWatch Agent Configuration"
+  ansible.windows.win_shell: |
+    Set-Content C:\amazon-cloudwatch-agent.json '{
+      "agent": {
+        "metrics_collection_interval": 60,
+        "logfile": "c:\\ProgramData\\Amazon\\AmazonCloudWatchAgent\\Logs\\amazon-cloudwatch-agent.log"
+      },
+      "metrics": {
+        "namespace": "MyCustomNamespace",
+        "metrics_collected": {
+          "Processor": {
+            "measurement": [
+              {"name": "% Idle Time", "rename": "CPU_IDLE", "unit": "Percent"},
+              "% Interrupt Time",
+              "% User Time",
+              "% Processor Time"
+            ],
+            "resources": [
+              "*"
+            ],
+            "append_dimensions": {
+              "customized_dimension_key_1": "customized_dimension_value_1",
+              "customized_dimension_key_2": "customized_dimension_value_2"
+            }
+          },
+          "LogicalDisk": {
+            "measurement": [
+              {"name": "% Idle Time", "unit": "Percent"},
+              {"name": "% Disk Read Time", "rename": "DISK_READ"},
+              "% Disk Write Time"
+            ],
+            "resources": [
+              "*"
+            ]
+          },
+          "customizedObjectName": {
+            "metrics_collection_interval": 60,
+            "customizedCounterName": [
+              "metric1",
+              "metric2"
+            ],
+            "resources": [
+              "customizedInstances"
+            ]
+          },
+          "Memory": {
+            "metrics_collection_interval": 5,
+            "measurement": [
+              "Available Bytes",
+              "Cache Faults/sec",
+              "Page Faults/sec",
+              "Pages/sec"
+            ]
+          },
+          "Network Interface": {
+            "metrics_collection_interval": 5,
+            "measurement": [
+              "Bytes Received/sec",
+              "Bytes Sent/sec",
+              "Packets Received/sec",
+              "Packets Sent/sec"
+            ],
+            "resources": [
+              "*"
+            ],
+            "append_dimensions": {
+              "customized_dimension_key_3": "customized_dimension_value_3"
+            }
+          },
+          "System": {
+            "measurement": [
+              "Context Switches/sec",
+              "System Calls/sec",
+              "Processor Queue Length"
+            ]
+          }
+        },
+        "append_dimensions": {
+          "ImageId": "${aws:ImageId}",
+          "InstanceId": "${aws:InstanceId}",
+          "InstanceType": "${aws:InstanceType}",
+          "AutoScalingGroupName": "${aws:AutoScalingGroupName}"
+        },
+        "aggregation_dimensions" : [["ImageId"], ["InstanceId", "InstanceType"], ["d1"],[]]
+      },
+      "logs": {
+        "logs_collected": {
+          "files": {
+            "collect_list": [
+              {
+                "file_path": "c:\\ProgramData\\Amazon\\AmazonCloudWatchAgent\\Logs\\amazon-cloudwatch-agent.log",
+                "log_group_name": "amazon-cloudwatch-agent.log",
+                "timezone": "UTC"
+              },
+              {
+                "file_path": "c:\\ProgramData\\Amazon\\AmazonCloudWatchAgent\\Logs\\test.log",
+                "log_group_name": "test.log",
+                "timezone": "Local"
+              }
+            ]
+          },
+          "windows_events": {
+            "collect_list": [
+              {
+                "event_name": "System",
+                "event_levels": [
+                  "INFORMATION",
+                  "ERROR"
+                ],
+                "log_group_name": "System",
+                "log_stream_name": "System",
+                "event_format": "xml"
+              },
+              {
+                "event_name": "CustomizedName",
+                "event_levels": [
+                  "WARNING",
+                  "ERROR"
+                ],
+                "log_group_name": "CustomizedLogGroup",
+                "log_stream_name": "CustomizedLogStream",
+                "event_format": "xml"
+              }
+            ]
+          }
+        },
+        "log_stream_name": "example_log_stream_name"
+      }
+    }'
+       
+- name: "Apply CloudWatch Agent Configuration"
+  ansible.windows.win_shell: |
+    & $env:ProgramFiles\Amazon\AmazonCloudWatchAgent\amazon-cloudwatch-agent-ctl.ps1 -a fetch-config -m ec2 -c file:$env:ProgramFiles\Amazon\AmazonCloudWatchAgent\config.json -s
     
