--- a/ansible/tasks/windows-cloud-watch-setup.yml
+++ b/ansible/tasks/windows-cloud-watch-setup.yml
@@ -1,11 +1,8 @@
 ---
-- name: "Download the CloudWatch Agent installation package to the user's desktop"
+- name: "Install the CloudWatch Agent Windows"
   ansible.windows.win_shell: |
     Invoke-WebRequest -Uri https://s3.amazonaws.com/amazoncloudwatch-agent/windows/amd64/latest/amazon-cloudwatch-agent.msi -OutFile $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
     Test-Path -Path $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
-
-- name: "Install the CloudWatch Agent"
-  ansible.windows.win_shell: |
     msiexec /i $env:USERPROFILE\Desktop\amazon-cloudwatch-agent.msi
     
 - name: "Launch the amazon-cloudwatch-agent-config-wizard.exe executable"
